	* gm2/mc-boot/Gdecl.c:  regenerated.
	* gm2/mc-boot/Gkeyc.c:  regenerated.
	* gm2/mc-boot/GmcError.c:  regenerated.
	* gm2/mc-boot/GmcLexBuf.c:  regenerated.
	* gm2/mc-boot/GmcPreprocess.c:  regenerated.
	* gm2/mc-boot/GmcPrintf.c:  regenerated.
	* gm2/mc-boot/GmcStack.c:  regenerated.
	* gm2/mc-boot/GmcStream.c:  regenerated.
	* gm2/mc-boot/GnameKey.c:  regenerated.

2017-06-13      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2expr.c:  more gnu coding standard changes.

2017-06-12      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  renamed target.c to host.c
          and changed appropriate rules.
	* gm2/gm2-libs-ch/host.c:  renamed from target.c
          corrected dates and formatting.  Include gm2-libs-host.h
          rather than p2c.h.
	* gm2/gm2-compiler/M2GenGCC.mod:  checkArrayElements,
          checkRecordTypes  remove first parameter, quad.
          checkIncorrectMeta (New procedure function).
          checkBecomes call checkIncorrectMeta.
          (CodeBecomes) call SubQuad.  Fixes a bug reported by
          John Dubery.
	* gm2/gm2-gcc/m2expr.c:  BuildModM2, BuildDivM2 fold and strip
	  no ops before asserting their type.

2017-06-09      Gaius Mulley <gaius@gnu.org>

 	* gm2/gm2-libs-ch/dtoa.c:  use memmove instead of memcpy.
          Fixes a bug reported by Ernst Bokkelkamp.
	* gm2/gm2-gcc/m2expr.c:  many formatting gnu coding standard
	  changes.

2017-06-08      Gaius Mulley <gaius@gnu.org>

	* Fixed pim4 and iso DIV and MOD bug reported by Ernst Bokkelkamp
          <ernst@bokkelkamp.de>, Benjamin Kowarsch and Xin Wang.
	* gm2/gm2-compiler/M2GenGCC.mod:  CodeDivM2, CodeModM2,
          FoldDivM2, FoldModM2, FoldDivCeil, CodeDivCeil, FoldModCeil
          CodeModCeil (New procedures).
	* gm2/gm2-compiler/M2Options.def:  GetISO, GetPIM, GetPIM2,
          GetPIM3, GetPIM4, GetPositiveModFloor (New procedure function
          definitions).
	* gm2/gm2-gcc/m2options.h:  define/export functions